--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -7,9 +7,9 @@
     // './../../imgs/cake.png'
     // './../../imgs/milk.png'
     background: url('./../../imgs/strawberry.png') (top 65%) (right 450px) no-repeat,
-        url('./../../imgs/milk.png') center right no-repeat,
-        url('./../../imgs/cake.png') center right no-repeat,
-        url('./../../imgs/blueberries.png') 0 700px no-repeat,
+        url('./../../imgs/milk.svg') center right no-repeat,
+        url('./../../imgs/cake.svg') center right no-repeat,
+        url('./../../imgs/blueberries.svg') 0 700px no-repeat,
         radial-gradient(33.45% 49.42% at 74.62% 53.25%, #FFFFFF 0%, #F0C2DB 100%, #F0C2DB 100%);
 
     // background-position-y: 100px 0 0 0;
@@ -101,9 +101,9 @@
         // max-height: 630px;
 
         background: url('./../../imgs/strawberry.png') (top 90%) (right 25%) no-repeat,
-            url('./../../imgs/milk.png') (top 100%) (right -100px) no-repeat,
-            url('./../../imgs/cake.png') (top 100%) (right -100px) no-repeat,
-            url('./../../imgs/blueberries.png') -30px 500px no-repeat,
+            url('./../../imgs/milk.svg') (top 100%) (right -100px) no-repeat,
+            url('./../../imgs/cake.svg') (top 100%) (right -100px) no-repeat,
+            url('./../../imgs/blueberries.svg') -30px 500px no-repeat,
             radial-gradient(45.68% 34.05% at 86.85% 64.2%,
                 #FFFFFF 0%, #F0C2DB 100%, #F0C2DB 100%);
 
@@ -219,9 +219,9 @@
         // max-height: 630px;
 
         background: url('./../../imgs/strawberry.png') (top 80%) (right 30%) no-repeat,
-            url('./../../imgs/milk.png') (top 80%) (right -100px) no-repeat,
-            url('./../../imgs/cake.png') (top 75%) (right -100px) no-repeat,
-            url('./../../imgs/blueberries.png') -30px 370px no-repeat,
+            url('./../../imgs/milk.svg') (top 80%) (right -100px) no-repeat,
+            url('./../../imgs/cake.svg') (top 75%) (right -100px) no-repeat,
+            url('./../../imgs/blueberries.svg') -30px 370px no-repeat,
             radial-gradient(33.45% 49.42% at 74.62% 53.25%,
                 #FFFFFF 0%, #F0C2DB 100%, #F0C2DB 100%);
 
