--- a/src/components/AboutProduct/AboutProduct.scss
+++ b/src/components/AboutProduct/AboutProduct.scss
@@ -19,7 +19,7 @@
         height: 90%;
         // box-sizing: border-box;
         background: url('./../../imgs/fog.png') bottom/ contain no-repeat,
-            url('./../../imgs/povar.svg') center/contain no-repeat;
+            url('./../../imgs/povar.png') center/contain no-repeat;
         text-align: center;
 
         img {
