--- a/src/components/AboutUs/AboutUs.scss
+++ b/src/components/AboutUs/AboutUs.scss
@@ -1,11 +1,11 @@
 .about_us {
     height: 100vh;
     background: url('./../../imgs/fog.png') bottom/ contain no-repeat,
-        url('./../../imgs/chef_aboutus.svg') bottom (right 100px) no-repeat,
+        url('./../../imgs/chef.png') bottom (right 100px) no-repeat,
         url('./../../imgs/fog_rev.png') top/ contain no-repeat,
         url('./../../imgs/aboutUsBG.png') bottom/ cover no-repeat;
     min-height: fit-content;
-
+    background-size: contain,700px,cover,cover,;
     .chocolate {
         position: relative;
         float: right;
@@ -119,7 +119,7 @@
     .about_us {
         height: fit-content;
         background: url('./../../imgs/fog.png') bottom/ contain no-repeat,
-            url('./../../imgs/chef_aboutus.svg') bottom (right -60px) no-repeat,
+            url('./../../imgs/chef.png') bottom (right -60px) no-repeat,
             url('./../../imgs/fog_rev.png') top/ contain no-repeat,
             url('./../../imgs/aboutUsBG.png') bottom/ cover no-repeat;
 
@@ -251,7 +251,7 @@
     .about_us {
         height: fit-content;
         background: url('./../../imgs/fog.png') bottom/ contain no-repeat,
-            url('./../../imgs/chef_aboutus.png') bottom (right -60px) no-repeat,
+            url('./../../imgs/chef.png') bottom (right -60px) no-repeat,
             url('./../../imgs/fog_rev.png') top/ contain no-repeat,
             url('./../../imgs/aboutUsBG.png') bottom/ cover no-repeat;
 
@@ -368,7 +368,4 @@
             vertical-align: bottom;
         }
     }
-
-
-
 }
