--- a/src/components/Slider/Slider.scss
+++ b/src/components/Slider/Slider.scss
@@ -49,6 +49,9 @@
 
         // column-gap: 3.3%;
         &__element {
+            a{
+                text-decoration: none;
+            }
             display: grid;
             grid-template-rows: 50% 5% 25% 20%;
             // display: flex;
@@ -91,7 +94,7 @@
             }
 
             &__button {
-
+                text-decoration: none;
                 justify-self: center;
                 // align-self: flex-start;
 
