--- a/src/components/AboutProduct/AboutProduct.scss
+++ b/src/components/AboutProduct/AboutProduct.scss
@@ -1,5 +1,6 @@
 .about {
-    height: 100vh;
+    height: 850px;
+
     background-size: cover;
     background-image: url('./../../imgs/aboutBg.png');
     box-sizing: border-box;
