--- a/src/components/AboutUs/AboutUs.scss
+++ b/src/components/AboutUs/AboutUs.scss
@@ -1,5 +1,7 @@
 .about_us {
     height: 100vh;
+    margin-top: 80px;
+    // margin-bottom: 100px;
     background: url('./../../imgs/fog.png') bottom/ contain no-repeat,
         url('./../../imgs/chef.png') bottom (right 100px) no-repeat,
         url('./../../imgs/fog_rev.png') top/ contain no-repeat,
