--- a/src/components/Catalog/Catalog.scss
+++ b/src/components/Catalog/Catalog.scss
@@ -1,6 +1,6 @@
 .catalog {
-    height: 100vh;
-    min-height: fit-content;
+    // height: 100vh;
+    // min-height: 1150px;
     background-color: #fff;
     background: url('./../../imgs/underHeader.png'),
         url('./../../imgs/raspberry_catalog.png') (top 250px) right no-repeat;
