--- a/src/components/Delivery/Delivery.scss
+++ b/src/components/Delivery/Delivery.scss
@@ -1,21 +1,31 @@
 .delivery {
-    height: 100vh;
-
+    height: 1100px;
+    background: url('./../../imgs/nuts.png') (top -100px) right no-repeat;
+    background-size: 18%;
+    display: flex;
+    // align-content: flex-end;
+    // vertical-align: bottom;
+    flex-direction: column;
+    padding: 0 10%;
 
     &__cassata_slice {
         position: relative;
-        bottom: 100px;
+        // bottom: 100px;
+        right: 13%;
+        width: 390px;
+        height: auto;
     }
 
-    &__nuts {
-        float: right;
-        position: relative;
-        bottom: 250px;
-    }
+    // &__nuts {
+    //     float: right;
+    //     position: relative;
+    //     bottom: 250px;
+    // }
 
     &__title {
         font-family: Gilroy;
         font-size: 65px;
+        padding-top: 150px;
         margin: 0;
     }
 
@@ -24,15 +34,18 @@
         // justify-content: space-evenly;
     }
 
+    // row-gap: 90px 90px;
+
     &__tablets {
+        margin: 62px 0 150px 0;
         display: flex;
         // grid-template-columns: repeat(7, 1fr);
         align-items: center;
         justify-content: space-around;
         // box-sizing: border-box;
         width: 100%;
-        position: relative;
-        bottom: 150px;
+        // position: relative;
+        // bottom: 150px;
 
         &__tablet {
             // margin: 0;
@@ -131,7 +144,9 @@
 @media screen and (max-width: 1080px) {
     .delivery {
         height: fit-content;
-
+        background: url('./../../imgs/nuts.png') (top ) right no-repeat;
+        background-size: 25%;
+        margin-top: 120px;
         &__cassata_slice {
             position: relative;
             bottom: 10px;
