--- a/src/components/Slider/Slider.scss
+++ b/src/components/Slider/Slider.scss
@@ -69,6 +69,8 @@
             &__image {
                 justify-self: center;
                 align-self: center;
+                width: 222px;
+                height: auto;
             }
 
             &__title {
@@ -195,6 +197,7 @@
                     justify-self: center;
                     align-self: center;
                     width: 250px;
+                    height: auto;
                 }
 
                 &__title {
@@ -300,6 +303,7 @@
                     justify-self: center;
                     align-self: center;
                     width: 250px;
+                    height: auto;
                 }
 
                 &__title {
@@ -422,6 +426,7 @@
                     justify-self: center;
                     align-self: center;
                     width: 150px;
+                    height: auto;
                     padding-top: 10px;
                 }
 
@@ -549,6 +554,7 @@
                     justify-self: center;
                     align-self: center;
                     width: 150px;
+                    height: auto;
                     padding-top: 10px;
                 }
 
@@ -662,6 +668,7 @@
                     justify-self: center;
                     align-self: center;
                     width: 150px;
+                    height: auto;
                     padding-top: 10px;
                 }
 
